# dissmodel

./: .gitignore  404.html  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_gol.py  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml  raster_io.py  requirements.txt  saida.txt  shapefile_to_raster.md  sitemap.xml
.github/workflows/: ci.yml  docs_deploy.yml  python-publish.yml  typecheck.yml
api/core/: index.html
api/executor/: index.html
api/executor/cli/: index.html
api/executor/schemas/: index.html
api/executor/testing/: index.html
api/geo/: index.html
api/geo/raster/: index.html
api/geo/vector/: index.html
api/io/: index.html
api/visualization/: index.html
benchmarks/: benchmark_flood_model.py  benchmark_game_of_life.py  benchmark_raster_vs_vector.py  ca_game_of_life.py
dissmodel/: __init__.py
dissmodel/core/: environment.py  model.py
dissmodel/executor/: __init__.py  cli.py  config.py  model_executor.py  registry.py  runner.py  schemas.py  testing.py  utils.py
dissmodel/experiments/: cli.py  testing.py
dissmodel/geo/: __init__.py  band_spec.py  celullar_automaton.py  fill.py  neighborhood.py  raster_cellular_automaton.py  raster_grid.py  raster_io.py  raster_model.py  regular_grid.py  spatial_model.py
dissmodel/geo/raster/: backend.py  cellular_automaton.py  io.py  model.py  raster_grid.py  raster_model.py  regular_grid.py  sync_model.py
dissmodel/geo/vector/: cellular_automaton.py  fill.py  regular_grid.py  spatial_model.py  sync_model.py  vector_grid.py
dissmodel/io/: __init__.py  _dispatch.py  _storage.py  _utils.py  _xarray.py  convert.py  raster.py  vector.py  xarray_.py
dissmodel/models/ca/: anneal.py  fire_model.py  fire_model_prob.py  fire_model_raster.py  game_of_life.py  game_of_life_raster.py  growth.py  propagation.py  snow.py
dissmodel/models/sysdyn/: daisyword.py  population_growth.py  predatorprey.py  sir.py
dissmodel/visualization/: __init__.py  _utils.py  chart.py  map.py  raster_map.py  streamlit.py  widgets.py
dissmodel/visualization/raster/: raster_map.py
docs/: examples.md  getting_started.md  index.md  why_dissmodel.md
docs/api/: core.md  geo.md  visualization.md
docs/api/executor/: cli.md  index.md  schemas.md  testing.md
docs/api/geo/: index.md  raster.md  vector.md
docs/api/io/: index.md
docs/examples/: cli.md  streamlit.md
docs/examples/gis/: elevacao_mares.py  elevacao_mares_v2.py  load_shapefile.py
docs/examples/notebooks/: ca_game_of_life.ipynb  sysdyn_sir.ipynb
docs/examples/sysdyn/: sir.py
docs/images/uml/: classes_GeoClasses.puml  packages_DissmodelPackages.puml  packages_GeoClasses.puml
docs/models/ca/: anneal.md  fire_model.md  fire_model_prob.md  game_of_life.md  growth.md  index.md  propagation.md  snow.md
docs/models/sysdyn/: coffee.md  index.md  lorenz.md  population_growth.md  predator_prey.md  sir.md
examples/: index.html
examples/ca/: index.html
examples/ca/streamlit/: run_all.py  run_snow.py
examples/cli/: ca_game_of_life.py  ca_game_of_life_raster.py  geo_fill.py  index.html  sysdyn_sir.py
examples/cli/ca/: ca_game_of_life.py  ca_game_of_life_raster.py
examples/cli/coastal_dynamics/raster/: flood_model.py  mangrove_model.py  run.py
examples/cli/coastal_dynamics/vector/: flood_model.py  mangue_model.py  run.py
examples/cli/demos/: core_behavior.py  geo_fill.py  geo_load_shapefile.py
examples/cli/executor/: flood_model.py
examples/cli/executor/flood/: flood_executor.py
examples/cli/experiments/: flood_executor.py
examples/cli/sysdyn/: sysdyn_sir.py
examples/models/ca/: fire_model_prob.py
examples/models/sysdyn/: __init__.py  cofee.py  lorenz.py  sir.py
examples/notebooks/: ca_game_of_life.ipynb  sysdyn_sir.ipynb
examples/notebooks/ca_game_of_life/: index.html
examples/notebooks/sysdyn_sir/: index.html
examples/streamlit/: ca_all.py  ca_fire_model.py  ca_fire_model_prob.py  ca_game_of_life.py  ca_snow.py  index.html  sysdyn_all.py  sysdyn_sir.py
getting_started/: index.html
models/ca/: index.html
models/ca/anneal/: index.html
models/ca/fire_model/: index.html
models/ca/fire_model_prob/: index.html
models/ca/game_of_life/: index.html
models/ca/growth/: index.html
models/ca/propagation/: index.html
models/ca/snow/: index.html
models/sysdyn/: index.html
models/sysdyn/coffee/: index.html
models/sysdyn/lorenz/: index.html
models/sysdyn/population_growth/: index.html
models/sysdyn/predator_prey/: index.html
models/sysdyn/sir/: index.html
search/: search_index.json
tests/: test_ca.py  test_cellular_automaton.py  test_scheduler.py  tests_fill_pattern.py
tests/executor/: conftest.py  test_cli.py  test_registry.py  test_runner.py  test_testing.py
tests/geo/: test_cellular_automaton_py  test_raster.py  tests_fill_pattern.py  tests_fill_pattern_py
tests/integration/: test_flood_model.py  test_game_of_life.py  test_game_of_life_integration.py
tests/raster/: test_backend.py  test_backend_xarray.py  test_raster_grid.py  test_raster_map.py  test_raster_model.py
tests/vector/: test_cellular_automaton.py  test_fill.py  test_regular_grid.py  test_spatial_model.py  test_vector_grid.py
why_dissmodel/: index.html
