[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dissmodel"
version = "0.1.5"
description = "dissmodel - Discrete Spatial Modeling"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Sérgio Costa" },
    { name = "Nerval Santos Junior" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "libpysal>=4.9.0",
    "matplotlib>=3.7.0",
    "rasterstats>=0.19.0",
    "affine>=2.4.0",
    "greenlet>=3.0.0",
    "salabim>=25.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/LambdaGeo/dissmodel"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"dissmodel" = ["*.json", "*.csv", "*.shp", "*.geojson", "*.tif"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/", "docs/", "examples/"]

[[tool.mypy.overrides]]
module = [
    "salabim.*",
    "geopandas.*",
    "shapely.*",
    "matplotlib.*",
    "rasterstats.*",
    "libpysal.*",
    "streamlit.*",
    "IPython.*",
    "affine.*",
]
ignore_missing_imports = true