[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dissmodel"
version = "0.2.1"
description = "Discrete Spatial Modeling framework for raster and vector simulations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [
    { name = "Sérgio Costa" },
    { name = "Nerval Santos Junior" }
]

maintainers = [
    { name = "Sérgio Costa" }
]

license = { text = "MIT" }

keywords = [
    "spatial modeling",
    "geospatial simulation",
    "cellular automata",
    "gis",
    "raster modeling",
    "vector modeling"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.25.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "libpysal>=4.9.0",
    "matplotlib>=3.7.0",
    "rasterstats>=0.19.0",
    "affine>=2.4.0",
    "greenlet>=3.0.0",
    "salabim>=25.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]

dev = [
    "mypy",
    "pytest",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-material",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[project.urls]
Homepage = "https://github.com/LambdaGeo/dissmodel"
Repository = "https://github.com/LambdaGeo/dissmodel"
Documentation = "https://lambdageo.github.io/dissmodel"
Issues = "https://github.com/LambdaGeo/dissmodel/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dissmodel*"]

[tool.setuptools.package-data]
"dissmodel" = ["*.json", "*.csv", "*.shp", "*.geojson", "*.tif"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/", "docs/", "examples/"]

[[tool.mypy.overrides]]
module = [
    "salabim.*",
    "geopandas.*",
    "shapely.*",
    "matplotlib.*",
    "rasterstats.*",
    "libpysal.*",
    "streamlit.*",
    "IPython.*",
    "affine.*",
]
ignore_missing_imports = true