[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dissmodel"
version = "0.5.1"
description = "Discrete Spatial Modeling framework for raster and vector simulations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [
    { name = "Sérgio Costa" },
    { name = "Nerval Santos Junior" }
]

maintainers = [
    { name = "Sérgio Costa" }
]

license = { text = "MIT" }

keywords = [
    "spatial modeling",
    "geospatial simulation",
    "cellular automata",
    "gis",
    "raster modeling",
    "vector modeling"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic-settings",
    "pydantic>=2.0",
    "numpy>=1.24,<2.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "libpysal>=4.9.0",
    "matplotlib>=3.7.0",
    "rasterstats>=0.19.0",
    "affine>=2.4.0",
    "streamlit>=1.40.0",
    "ipywidgets>=8.0.0",   # Colab/Jupyter visualization — Output widget
]

[project.optional-dependencies]

xarray = [
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",       # backend for to_netcdf / open_dataset
    "zarr>=2.16.0",         # backend for to_zarr / open_zarr (MinIO/S3)
    "pyproj>=3.4.0",        # CRS → spatial_ref (CF convention)
    "rasterio>=1.3.0",      # Affine transform recovery in from_xarray
]

dev = [
    "mypy",
    "pytest",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-material",
    # xarray extras useful during development
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "zarr>=2.16.0",
    "pyproj>=3.4.0",
    "rasterio>=1.3.0",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[project.urls]
Homepage = "https://github.com/DisSModel/dissmodel"
Repository = "https://github.com/DisSModel/dissmodel"
Documentation = "https://lambdageo.github.io/dissmodel"
Issues = "https://github.com/DisSModel/dissmodel/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dissmodel*"]

[tool.setuptools.package-data]
"dissmodel" = ["*.json", "*.csv", "*.shp", "*.geojson", "*.tif"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/", "docs/", "examples/"]

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "matplotlib.*",
    "rasterstats.*",
    "libpysal.*",
    "streamlit.*",
    "IPython.*",
    "affine.*",
    "xarray.*",
    "netCDF4.*",
    "zarr.*",
    "pyproj.*",
    "rasterio.*",
]
ignore_missing_imports = true
